<resources>
    <string name="app_name">Explorer Kids</string>
    <string name="mewarnai">Mewarnai</string>
    <string name="belajar">Belajar</string>
    <string name="musik">Musik</string>
    <string name="huruf">Huruf</string>
    <string name="angka">Angka</string>
    <string name="sayur">Sayur</string>
    <string name="hewan">Hewan</string>
    <string name="buah">Buah</string>
    <string name="bentuk">Bentuk</string>
    <string name="alat">Alat dan Perkakas</string>
    <string name="transportasi">Transportasi</string>
    <string name="menulis">Menulis</string>
    <string name="warna">Warna</string>
    <string name="profesi">Profesi</string>
    <string name="tata">Tata Surya</string>
    <string name="tebak_transportasi">Tebak Transportasi</string>
    <string name="tebak_perkakas">Tebak Alat Perkakas</string>
    <string name="tebak_profesi">Tebak Profesi</string>
    <string name="tebak_bentuk">Tebak Bentuk</string>
    <string name="tebak_warna">Tebak Warna</string>
    <string name="tebak_tata">Tebak Tata Surua</string>
    <string name="tebak_buah">Tebak Buah</string>
    <string name="tebak_hewan">Tebak Hewan</string>
    <string name="tebak_huruf">Tebak Huruf</string>
    <string name="tebak_menulis">Tebak Menulis</string>
    <string name="tebak_sayur">Tebak Sayur</string>
    <string name="tebak_angka">Tebak Angka</string>
    <string name="mobil">Mobil</string>
    <string name="truk">Truk</string>
    <string name="ambulan">Ambulan</string>
    <string name="perahu">Perahu</string>
    <string name="keretaApi">Kereta Api</string>
    <string name="pemadam_kebakaran">Pemadam Kebakaran</string>
    <string name="mobilPolisi">Mobil Polisi</string>
    <string name="pesawat">Pesawat</string>
    <string name="sepedaMotor">Sepeda Motor</string>
    <string name="kapal">Kapal</string>
    <string name="bajaj">Bajaj</string>
    <string name="balon">Balon Udara</string>
    <string name="buss">Bus</string>
    <string name="kapal_cepat">Kapal Cepat</string>
    <string name="trukKontainer">Truk Kontainer</string>
    <string name="mobilSport">Mobil Sport</string>
    <string name="sepeda">Sepeda</string>
    <string name="vespa">Vespa</string>
    <string name="bus_Sekolah">Bus Sekolah</string>
    <string name="helikopter">Helikopter</string>
    <string name="car">Car</string>
    <string name="truck">Truck</string>
    <string name="ambulance">Ambulance</string>
    <string name="boat">Boat</string>
    <string name="train">Train</string>
    <string name="fireEngine">Fire Engine</string>
    <string name="police">Police Car</string>
    <string name="airplane">Airplane</string>
    <string name="motor">Motorcycle</string>
    <string name="ship">Ship</string>
    <string name="rick">Auto Rickshaw</string>
    <string name="balloon">Air Balloon</string>
    <string name="bus">Bus</string>
    <string name="speedboat">Speedboat</string>
    <string name="containerTruck">Container Truck</string>
    <string name="sportCar">Sport Car</string>
    <string name="bycicle">Bycycle</string>
    <string name="scooter">Scooter</string>
    <string name="school">School Bus</string>
    <string name="helicopter">Helicopter</string>
    <string name="gembok">Gembok</string>
    <string name="gergaji">Gergaji</string>
    <string name="gergaji_mesin">Gergaji Mesin</string>
    <string name="gunting">Gunting</string>
    <string name="helm">Helm</string>
    <string name="jarum">Jarum</string>
    <string name="kaca_pembesar">Kaca Pembesar</string>
    <string name="kapak">Kapak</string>
    <string name="kunci_inggris">Kunci Inggris</string>
    <string name="magnet">Magnet</string>
    <string name="obeng">Obeng</string>
    <string name="paku">Paku</string>
    <string name="palu">Palu</string>
    <string name="rantai">Rantai</string>
    <string name="roda">Roda</string>
    <string name="skop">Sekop</string>
    <string name="baut">Baut</string>
    <string name="soket">Soket</string>
    <string name="tali">Tali</string>
    <string name="tangga">Tangga</string>
    <string name="gembok1">Padlock</string>
    <string name="gergaji1">Handsaw</string>
    <string name="gergaji_mesin1">Chainsaw</string>
    <string name="gunting1">Scissor</string>
    <string name="helm1">Helmet</string>
    <string name="jarum1">Needle</string>
    <string name="kaca_pembesar1">Magnifying Glass</string>
    <string name="kapak1">Axe</string>
    <string name="kunci_inggris1">Wrench</string>
    <string name="obeng1">Screwdriver</string>
    <string name="paku1">Nail</string>
    <string name="palu1">Hammer</string>
    <string name="rantai1">Chain</string>
    <string name="roda1">Wheel</string>
    <string name="skop1">Shovel</string>
    <string name="baut1">Screw</string>
    <string name="soket1">Power Socker</string>
    <string name="tali1">Rope</string>
    <string name="tangga1">Ladder</string>
    <string name="Koki">Koki</string>
    <string name="Pengusaha">Pengusaha</string>
    <string name="Dokter">Dokter</string>
    <string name="Nelayan">Nelayan</string>
    <string name="Guru">Guru</string>
    <string name="Ilmuan">Ilmuan</string>
    <string name="Insinyur">Insinyur</string>
    <string name="Montir">Montir</string>
    <string name="Pelukis">Pelukis</string>
    <string name="Pemadam">Pemadam Kebakaran</string>
    <string name="Petani">Petani</string>
    <string name="Polisi">Polisi</string>
    <string name="Pramugari">Pramugari</string>
    <string name="Tentara">Tentara</string>
    <string name="Sekretaris">Sekretaris</string>
    <string name="Pelayan">Pelayan</string>
    <string name="Atlet">Atlet</string>
    <string name="Koki1">Chef</string>
    <string name="Pengusaha1">Businessman</string>
    <string name="Dokter1">Doctor</string>
    <string name="Nelayan1">Fisherman</string>
    <string name="Guru1">Teacher</string>
    <string name="Ilmuan1">Scientist</string>
    <string name="Insinyur1">Engineer</string>
    <string name="Montir1">Mechanic</string>
    <string name="Pelukis1">Painter</string>
    <string name="Pemadam1">Fire Fighter</string>
    <string name="Petani1">Farmer</string>
    <string name="Photographer">Photographer</string>
    <string name="Pilot">Pilot</string>
    <string name="Polisi1">Police</string>
    <string name="Pramugari1">Air Hostess</string>
    <string name="Tentara1">Army</string>
    <string name="Sekretaris1">Secretary</string>
    <string name="Pelayan1">Waiter</string>
    <string name="Atlet1">Atlhete</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="satu">Satu</string>
    <string name="dua">Dua</string>
    <string name="tiga">Tiga</string>
    <string name="empat">Empat</string>
    <string name="lima">Lima</string>
    <string name="enam">Enam</string>
    <string name="tujuh">Tujuh</string>
    <string name="delapan">Delapan</string>
    <string name="sembilan">Sembilan</string>
    <string name="sepuluh">Sepuluh</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alpukat">Alpukat</string>
    <string name="anggur">Anggur</string>
    <string name="stroberi">Stroberi</string>
    <string name="belimbing">Belimbing</string>
    <string name="buah_naga">Buah Naga</string>
    <string name="ceri">Ceri</string>
    <string name="delima">Delima</string>
    <string name="durian">Durian</string>
    <string name="jambu">Jambu</string>
    <string name="jeruk_nipis">Jeruk Nipis</string>
    <string name="jeruk">Jeruk</string>
    <string name="kelapa">Kelapa</string>
    <string name="kiwi">Kiwi</string>
    <string name="lemon">Lemon</string>
    <string name="mangga">Mangga</string>
    <string name="nanas">Nanas</string>
    <string name="pepaya">Pepaya</string>
    <string name="pisang">Pisang</string>
    <string name="rambutan">Rambutan</string>
    <string name="semangka">Semangka</string>
    <string name="persegi">Persegi</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="lonjong">Lonjong</string>
    <string name="segitiga">Segitiga</string>
    <string name="segi_lima">Segi Lima</string>
    <string name="segi_enam">Segi Enam</string>
    <string name="segi_delapan">Segi Delapan</string>
    <string name="jajar_genjang">Jajar Genjang</string>
    <string name="trapesium">Trapesium</string>
    <string name="belah_ketupat">Belah Ketupat</string>
    <string name="bintang">Bintang</string>
    <string name="panah">Panah</string>
    <string name="bulan">Bulan</string>
    <string name="layang">Layang - layang</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="oval">Oval</string>
    <string name="triangle">Triangle</string>
    <string name="pentagon">Pentagon</string>
    <string name="hexagon">Hexagon</string>
    <string name="octagonal">Octagonal</string>
    <string name="parallelogram">Parallelogram</string>
    <string name="trapezoidal">Trapezoidal</string>
    <string name="rhombus">Rhombus</string>
    <string name="star">Star</string>
    <string name="arrow">Arrow</string>
    <string name="moon">Moon</string>
    <string name="kite">Kite</string>
    <string name="avocado">Avocado</string>
    <string name="grape">Grape</string>
    <string name="strawberry">Strawberry</string>
    <string name="star_fruit">Star Fruit</string>
    <string name="dragon_fruit">Dragon Fruit</string>
    <string name="cherry">Cherry</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="guava">Guava</string>
    <string name="lime">Lime</string>
    <string name="orange">Orange</string>
    <string name="coconut">Coconut</string>
    <string name="mango">Mango</string>
    <string name="pineapple">Pineapple</string>
    <string name="papaya">Papaya</string>
    <string name="banana">Banana</string>
    <string name="watermelon">Watermelon</string>
    <string name="matahari">Matahari</string>
    <string name="merkurius">Merkurius</string>
    <string name="venus">Venus</string>
    <string name="bumi">Bumi</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturnus">Saturnus</string>
    <string name="uranus">Uranus</string>
    <string name="neptunus">Neptunus</string>
    <string name="sun">Sun</string>
    <string name="mercury">Mercury</string>
    <string name="earth">Earth</string>
    <string name="saturn">Saturn</string>
    <string name="neptune">Neptune</string>
    <string name="dos">Do</string>
    <string name="re">Re</string>
    <string name="mi">Mi</string>
    <string name="fa">Fa</string>
    <string name="sol">Sol</string>
    <string name="la">La</string>
    <string name="si">Si</string>
</resources>