<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_belajars"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DasboardBelajarHuruf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logo_homee"
            android:id="@+id/home"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rockoultraflf"
                android:text="@string/huruf"
                android:autoSizeTextType="uniform"
                android:textSize="32sp"
                />
        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <!--            start Belajar Huruf-->
                <FrameLayout
                    android:id="@+id/belajar_huruf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="35dp"
                    android:paddingTop="63dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="35dp"
                    android:background="@drawable/background_menu_belajar"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="126dp"
                            android:layout_height="126dp"

                            android:src="@drawable/icon_huruf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="50dp"
                            android:paddingBottom="20dp"
                            android:text="@string/belajar"
                            android:fontFamily="@font/rockoultraflf"/>

                    </LinearLayout>

                </FrameLayout>
                <!--            end Belajar Huruf-->

                <!--            start tebak Huruf-->
                <FrameLayout
                    android:id="@+id/tebak_huruf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="35dp"
                    android:paddingTop="63dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingLeft="35dp"
                    android:background="@drawable/background_menu_belajar"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="126dp"
                            android:layout_height="126dp"

                            android:src="@drawable/icon_tebak" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="50dp"
                            android:paddingBottom="20dp"
                            android:text="@string/tebak_huruf"
                            android:fontFamily="@font/rockoultraflf"/>

                    </LinearLayout>

                </FrameLayout>
                <!--            end Tebak Huruf-->


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>